@@ -37,7 +37,7 @@ class GoogleDomainsPlugin(ServicePlugin):
             query['myip'] = ip.v6 or ip.v4
 
         url="{}?{}".format(self._url, urllib.parse.urlencode(query))
-        http_basic_auth_setup(url)
+        http_basic_auth_setup(url, targethost=hostname)
         request = urllib.request.Request(url=url, method='POST')
         html = get_response(log, request)
 
