@@ -35,7 +35,7 @@ class MyOnlinePortalPlugin(ServicePlugin):
             url += "&ip=" + ip.v4
         if ip and ip.v6:
             url += "&ip6=" + ip.v6
-        http_basic_auth_setup(url)
+        http_basic_auth_setup(url, targethost=hostname)
         html = get_response(log, url)
         key = html.split()[0]
         if key not in ['OK', 'good', 'nochg']:
