@@ -32,5 +32,5 @@ class NoAddressPlugin(ServicePlugin):
         url = self._url.format(hostname)
         if ip:
             url += "&myip=" + ip.v4
-        http_basic_auth_setup(url)
+        http_basic_auth_setup(url, targethost=hostname)
         get_response(log, url)
