@@ -1,6 +1,7 @@
 0.7.0 TBD
 * Support multiple configuration sections in config file (#25)
 * Add FINAL_PREFIX environment variable support to ease packaging
+* Support multiple credentials for the same provider (#52)
 
 0.6.6
 * Fix wrong path in systemd service file (#54).
